--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,11 +1,11 @@
 body {
-	text-align: center;
+	display: flex;
+	justify-content: center;
 	color: blue;
 	background-image: url(https://astelus.com/wp-content/viajes/la-gran-muralla-china-una-construccion-impresionante.jpg);
 }
 
 div {
-	margin: 0 auto;
 
 }
 h1 {
